--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="30dp"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName|textPassword"
+        android:password="false" />
 
 
     <Button
