--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -5,37 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     tools:context=".Register2">
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="100dp"
-        android:text="Personalise your profile"
-        android:textSize="30dp" />
+        android:text="@string/personalise_your_profile"
+        android:textSize="30sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:text="Profile picture"
+            android:text="@string/profile_picture"
             android:textSize="20sp" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:layout_marginRight="30dp"
+            android:contentDescription="@string/take_photo"
             android:foregroundGravity="left"
             app:srcCompat="@android:drawable/ic_menu_camera" />
 
@@ -44,8 +44,8 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="30dp"
-            android:layout_marginRight="50dp"
             android:background="#00FFFFFF"
+            android:contentDescription="@string/image_gallery"
             android:foregroundGravity="left"
             android:src="@android:drawable/ic_menu_gallery" />
 
@@ -55,18 +55,16 @@
         android:id="@+id/text7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
-        android:text="Nickname" />
+        android:labelFor="@id/Nickname_register2"
+        android:text="@string/nickname" />
 
     <EditText
         android:id="@+id/Nickname_register2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
+        android:autofillHints=""
         android:ems="10"
         android:inputType="textPersonName" />
 
@@ -74,35 +72,31 @@
         android:id="@+id/text9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
-        android:text="Interest" />
+        android:labelFor="@id/Interest_register2"
+        android:text="@string/interest" />
 
     <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
         android:id="@+id/Interest_register2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp" />
+        android:layout_marginTop="10dp" />
+
     <TextView
         android:id="@+id/text2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
-        android:text="Short Description" />
+        android:labelFor="@id/Shortdesc_register2"
+        android:text="@string/short_description" />
 
     <EditText
         android:id="@+id/Shortdesc_register2"
         android:layout_width="match_parent"
         android:layout_height="126dp"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
-        android:ems="10"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:maxLength="300" />
 
@@ -110,9 +104,7 @@
         android:id="@+id/Register_register2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        android:text="Register" />
+        android:text="@string/register" />
 
 </LinearLayout>
