--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_Friend"
-        android:icon="@drawable/ic_people_black_24dp"
+        android:icon="@drawable/friends"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_explore"
-        android:icon="@drawable/ic_search_black_24dp"
+        android:icon="@drawable/search"
         android:title="@string/title_explore" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/profile"
         android:title="@string/title_notifications" />
 
 </menu>
