--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppTheme.CustomTheme" parent="Theme.AppCompat.Light.NoActionBar" >
+    <style name="AppTheme.CustomTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar" >
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowCloseOnTouchOutside">true</item>
     </style>
