--- a/app/src/main/res/layout/fragment_home_addfriend.xml
+++ b/app/src/main/res/layout/fragment_home_addfriend.xml
@@ -14,6 +14,8 @@
             android:id="@+id/addfriend_profilepic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_launcher_background" />
