--- a/app/src/main/res/layout/fragment_create_activity.xml
+++ b/app/src/main/res/layout/fragment_create_activity.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_weight="1"
-            android:text="@string/header_image"
+            android:text="@string/profile_picture"
             android:textSize="20sp" />
 
         <ImageButton
