--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,19 +8,38 @@
 
      <com.lorentzos.flingswipe.SwipeFlingAdapterView
          android:id="@+id/frame"
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:layout_marginStart="16dp"
-         android:layout_marginTop="16dp"
-         android:layout_marginEnd="16dp"
-         android:layout_marginBottom="16dp"
+         android:layout_width="330dp"
+         android:layout_height="577dp"
          android:background="#ffeee9e2"
+         android:foregroundGravity="center"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintHorizontal_bias="0.502"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
-         app:layout_constraintVertical_bias="0.0"
+         app:layout_constraintVertical_bias="0.504"
          app:rotation_degrees="15.5"
-         tools:context=".ui.Friends.FriendsFragment" />
+         tools:context=".ui.Friends.FriendsFragment">
+
+          <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+
+               <com.google.android.material.floatingactionbutton.FloatingActionButton
+                   android:id="@+id/addfriend_yes"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:clickable="true"
+                   android:src="?android:attr/textCheckMark" />
+
+               <com.google.android.material.floatingactionbutton.FloatingActionButton
+                   android:id="@+id/floatingActionButton2"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_marginBottom="92dp"
+                   android:clickable="true"
+                   android:src="@android:drawable/ic_delete" />
+          </LinearLayout>
+     </com.lorentzos.flingswipe.SwipeFlingAdapterView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
