--- a/app/src/main/res/layout/interestitem.xml
+++ b/app/src/main/res/layout/interestitem.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    android:layout_width="170dp"
+    android:layout_height="200dp"
     android:layout_margin="5dp"
     cardview:cardCornerRadius="4dp">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/interest_image"
             android:layout_width="match_parent"
             android:layout_height="160dp"
-            android:scaleType="centerCrop"
-            android:background="#2d2d2d"></ImageView>
-        
+            android:background="#2d2d2d"
+            android:scaleType="centerCrop"></ImageView>
+
         <TextView
             android:id="@+id/interest_item"
-            android:textColor="#2d2d2d"
-            android:textSize="20dp"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Interest"></TextView>
+            android:gravity="center"
+            android:text="Interest"
+            android:textColor="#2d2d2d"
+            android:textSize="20dp"></TextView>
 
     </LinearLayout>
 
