--- a/app/src/main/res/layout/activityitem.xml
+++ b/app/src/main/res/layout/activityitem.xml
@@ -1,16 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="380dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
     cardview:cardCornerRadius="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="130dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/act_picture"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:background="#2d2d2d"
+            android:scaleType="centerCrop"></ImageView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="152dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:background="@color/lightBlue"></ImageView>
+
+                <TextView
+                    android:id="@+id/Name_register"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="Name"
+                    android:textSize="20dp"></TextView>
+
+                <TextView
+                    android:id="@+id/act_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="Location"
+                    android:textSize="17dp"></TextView>
+
+                <TextView
+                    android:id="@+id/act_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="Time"
+                    android:textSize="17dp"></TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/activity_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Activity Name"
+                    android:textSize="25dp"
+                    android:layout_marginTop="20dp"
+                    >
+                </TextView>
+
+                <TextView
+                    android:id="@+id/act_desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Description"
+                    android:layout_marginTop="15dp"
+                    android:textSize="20dp"
+                    >
+
+                </TextView>
+
+
+
+            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
