--- a/app/src/main/res/layout/display_activities.xml
+++ b/app/src/main/res/layout/display_activities.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/testlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ActivitiesFragment">
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/button"
@@ -18,7 +16,7 @@
         android:text="+ Create Activity" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_activities"
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
