Almost done with on Fragment home layout look. Debugging FriendsFragment.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,13 +8,13 @@
 
      <com.lorentzos.flingswipe.SwipeFlingAdapterView
          android:id="@+id/frame"
-         android:layout_width="330dp"
-         android:layout_height="577dp"
+         android:layout_width="0dp"
+         android:layout_height="0dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="16dp"
-         android:background="#ffeee9e2"
+         android:background="@color/white"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.502"
@@ -25,28 +25,50 @@
          tools:context=".ui.Friends.FriendsFragment">
 
      </com.lorentzos.flingswipe.SwipeFlingAdapterView>
+
      <com.google.android.material.floatingactionbutton.FloatingActionButton
-         android:id="@+id/floatingActionButton"
+         android:id="@+id/addfriend_no"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:clickable="true"
-         app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
+         app:backgroundTint="#E6E8E3"
+         app:layout_constraintEnd_toStartOf="@+id/addfriend_yes"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintHorizontal_chainStyle="spread"
          app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toTopOf="@+id/floatingActionButton2"
-         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+         app:layout_constraintTop_toTopOf="@+id/addfriend_yes"
+         app:srcCompat="@android:drawable/ic_delete" />
 
      <com.google.android.material.floatingactionbutton.FloatingActionButton
-         android:id="@+id/floatingActionButton2"
+         android:id="@+id/addfriend_yes"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp"
          android:clickable="true"
+         app:backgroundTint="#72D676"
          app:layout_constraintBottom_toBottomOf="@+id/frame"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
-         app:layout_constraintStart_toEndOf="@+id/floatingActionButton"
+         app:layout_constraintStart_toEndOf="@+id/addfriend_no"
+         app:rippleColor="#C6F1A4"
          app:srcCompat="?android:attr/textCheckMark" />
+
+     <TextView
+         android:id="@+id/textView9"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="Maybe Next Time..."
+         app:layout_constraintEnd_toEndOf="@+id/addfriend_no"
+         app:layout_constraintStart_toStartOf="@+id/addfriend_no"
+         app:layout_constraintTop_toBottomOf="@+id/addfriend_no" />
+
+     <TextView
+         android:id="@+id/textView10"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="Let's Be Friends!"
+         app:layout_constraintEnd_toEndOf="@+id/addfriend_yes"
+         app:layout_constraintStart_toStartOf="@+id/addfriend_yes"
+         app:layout_constraintTop_toBottomOf="@+id/addfriend_yes" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
