--- a/app/src/main/res/layout/activityitem.xml
+++ b/app/src/main/res/layout/activityitem.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="380dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="420dp"
     android:layout_margin="5dp"
     cardview:cardCornerRadius="4dp">
 
@@ -14,7 +14,7 @@
         <ImageView
             android:id="@+id/act_picture"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_height="180dp"
             android:background="#2d2d2d"
             android:scaleType="centerCrop"></ImageView>
 
@@ -87,23 +87,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Activity Name"
-                    android:textSize="25dp"
                     android:layout_marginTop="20dp"
-                    >
-                </TextView>
+                    android:text="Activity Name"
+                    android:textSize="25dp"></TextView>
 
                 <TextView
                     android:id="@+id/act_desc"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Description"
                     android:layout_marginTop="15dp"
-                    android:textSize="20dp"
-                    >
+                    android:text="Description"
+                    android:textSize="20dp">
 
                 </TextView>
-
 
 
             </LinearLayout>
