--- a/app/src/main/res/layout/fragment_home_alert.xml
+++ b/app/src/main/res/layout/fragment_home_alert.xml
@@ -1,10 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"></LinearLayout>
+        android:orientation="horizontal">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/newfriend_friend"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:background="#00FFFFFF"
+            app:civ_border_color="#00FFFFFF"
+            app:civ_border_overlay="false"
+            app:srcCompat="@drawable/ic_launcher_background" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/newfriend_user"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:background="#00FFFFFF"
+            app:civ_border_color="#00FFFFFF"
+            app:civ_border_overlay="false"
+            app:srcCompat="@drawable/ic_launcher_background" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
