Fixed ConcurrentModificationException in Coversation, updated designs and fixed the logout bug

--- a/app/src/main/res/drawable/background_left.xml
+++ b/app/src/main/res/drawable/background_left.xml
@@ -5,5 +5,5 @@
     <corners
         android:radius="10dp"
         android:topLeftRadius="0dp"/>
-    <solid android:color="@color/right"></solid>
+    <solid android:color="@color/left"></solid>
 </shape>
