--- a/app/src/main/res/layout/activity_new_chat.xml
+++ b/app/src/main/res/layout/activity_new_chat.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/colorBackgroundColor"
     android:orientation="vertical"
     tools:context=".NewChat">
 
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="Click on a friend to start chatting!"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp" />
 
     <androidx.recyclerview.widget.RecyclerView
