--- a/app/src/main/res/layout/display_activities.xml
+++ b/app/src/main/res/layout/display_activities.xml
@@ -3,16 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackgroundColor"
     android:orientation="vertical">
 
     <Button
         android:id="@+id/button_create_activity"
         android:layout_width="match_parent"
-        android:layout_height="141dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="5dp"
-        android:layout_weight="1"
+        android:background="@drawable/secondary_button"
+        android:textStyle="bold"
+
         android:text="+ Create Activity" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -21,8 +24,7 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="5dp"
-        android:layout_weight="1" />
+        android:layout_marginRight="5dp" />
 
 
 </LinearLayout>
