--- a/app/src/main/res/layout/gridfrienditem.xml
+++ b/app/src/main/res/layout/gridfrienditem.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="100dp"
-    android:layout_height="120dp">
+    android:layout_height="140dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="#F1EFEF">
+        app:cardBackgroundColor="@color/colorBackgroundColor">
 
         <LinearLayout
             android:layout_width="match_parent"
