--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#F2F2F2</color>
     <color name="colorAccent">#F2A03D</color>
     <color name="colorBackgroundColor">#F2F2F2</color>
-    <color name="right">#21d1de</color>
-    <color name="left">#75e916</color>
+    <color name="right">#FFFFFF</color>
+    <color name="left">#F2A03D</color>
 </resources>
