--- a/app/src/main/res/layout/chat_left_item.xml
+++ b/app/src/main/res/layout/chat_left_item.xml
@@ -18,5 +18,6 @@
         android:background="@drawable/background_left"
         android:padding="8dp"
         android:text="TextView"
-        android:textSize="18sp"/>
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 </RelativeLayout>
