--- a/app/src/main/res/layout/chat_right_item.xml
+++ b/app/src/main/res/layout/chat_right_item.xml
@@ -9,22 +9,15 @@
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image_chatitem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
-            android:visibility="gone"/>
-
         <TextView
             android:id="@+id/show_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:background="@drawable/background_right"
-            android:textColor="#fff"
-            android:padding="8dp"
             android:layout_alignParentEnd="true"
-            android:textSize="18sp"/>
+            android:background="@drawable/background_right"
+            android:padding="8dp"
+            android:text="TextView"
+            android:textColor="#000000"
+            android:textSize="18sp" />
     </RelativeLayout>
 </RelativeLayout>
