--- a/app/src/main/res/layout/interestitem.xml
+++ b/app/src/main/res/layout/interestitem.xml
@@ -25,7 +25,8 @@
             android:gravity="center"
             android:text="Interest"
             android:textColor="#2d2d2d"
-            android:textSize="20dp"></TextView>
+            android:textSize="15dp"
+            android:fontFamily="sans-serif-medium"></TextView>
 
     </LinearLayout>
 
