--- a/app/src/main/res/layout/activity_display_selected.xml
+++ b/app/src/main/res/layout/activity_display_selected.xml
@@ -49,7 +49,8 @@
                         android:layout_marginLeft="20dp"
                         android:gravity="center"
                         android:text="Name"
-                        android:textSize="30dp"></TextView>
+                        android:textSize="30dp"
+                        android:fontFamily="sans-serif-black"></TextView>
                 </LinearLayout>
 
             </LinearLayout>
@@ -67,7 +68,8 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="30dp"
                     android:text="Activity Name"
-                    android:textSize="25dp"></TextView>
+                    android:textSize="25dp"
+                    android:fontFamily="sans-serif-smallcaps"></TextView>
 
                 <TextView
                     android:id="@+id/selected_act_desc"
@@ -77,7 +79,8 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginRight="30dp"
                     android:text="Description"
-                    android:textSize="20dp">
+                    android:textSize="20dp"
+                    android:fontFamily="sans-serif-light">
 
                 </TextView>
 
@@ -97,7 +100,8 @@
                     android:layout_marginLeft="30dp"
                     android:gravity="center"
                     android:text="Location"
-                    android:textSize="17dp"></TextView>
+                    android:textSize="17dp"
+                    android:fontFamily="sans-serif-smallcaps"></TextView>
 
                 <TextView
                     android:id="@+id/selected_act_date"
@@ -106,7 +110,8 @@
                     android:layout_marginLeft="30dp"
                     android:layout_marginTop="7dp"
                     android:text="Date"
-                    android:textSize="17dp"></TextView>
+                    android:textSize="17dp"
+                    android:fontFamily="sans-serif-smallcaps"></TextView>
 
                 <TextView
                     android:id="@+id/selected_act_time"
@@ -115,7 +120,8 @@
                     android:layout_marginLeft="30dp"
                     android:layout_marginTop="7dp"
                     android:text="Time"
-                    android:textSize="17dp"></TextView>
+                    android:textSize="17dp"
+                    android:fontFamily="sans-serif-smallcaps"></TextView>
 
                 <Button
                     android:id="@+id/interested_button"
@@ -124,7 +130,11 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="30dp"
                     android:layout_marginLeft="30dp"
-                    android:text="@string/im_interested" />
+                    android:text="@string/im_interested"
+                    android:background="@drawable/primary_button"
+                    android:shadowColor="#31FFFFFF"
+                    android:shadowRadius="0"
+                    android:textColor="#FFFFFF"/>
 
 
             </LinearLayout>
