--- a/app/src/main/res/layout/activityitem.xml
+++ b/app/src/main/res/layout/activityitem.xml
@@ -45,7 +45,7 @@
                     android:gravity="center"
                     android:text="Name"
                     android:textSize="20dp"
-                    android:fontFamily="sans-serif-medium"></TextView>
+                    ></TextView>
 
                 <TextView
                     android:id="@+id/act_location"
@@ -56,7 +56,7 @@
                     android:gravity="center"
                     android:text="Location"
                     android:textSize="17dp"
-                    android:fontFamily="sans-serif-light"></TextView>
+                    ></TextView>
 
                 <TextView
                     android:id="@+id/act_date"
@@ -67,7 +67,7 @@
                     android:gravity="center"
                     android:text="Date"
                     android:textSize="17dp"
-                    android:fontFamily="sans-serif-light"></TextView>
+                    ></TextView>
 
                 <TextView
                     android:id="@+id/act_time"
@@ -78,7 +78,7 @@
                     android:gravity="center"
                     android:text="Time"
                     android:textSize="17dp"
-                    android:fontFamily="sans-serif-light"></TextView>
+                    ></TextView>
             </LinearLayout>
 
             <LinearLayout
@@ -94,7 +94,7 @@
                     android:layout_marginTop="20dp"
                     android:text="Activity Name"
                     android:textSize="25dp"
-                    android:fontFamily="sans-serif-black"></TextView>
+                    ></TextView>
 
                 <TextView
                     android:id="@+id/act_desc"
@@ -103,7 +103,7 @@
                     android:layout_marginTop="15dp"
                     android:text="Description"
                     android:textSize="20dp"
-                    android:fontFamily="sans-serif-light">
+                    >
                 </TextView>
 
 
