--- a/app/src/main/res/layout/interestitem.xml
+++ b/app/src/main/res/layout/interestitem.xml
@@ -26,7 +26,7 @@
             android:text="Interest"
             android:textColor="#2d2d2d"
             android:textSize="15dp"
-            android:fontFamily="sans-serif-medium"></TextView>
+            ></TextView>
 
     </LinearLayout>
 
